# w210-capstone

./: README.md  pyproject.toml  requirements.txt
config/: config.json
notebooks/: exploratory_analysis_demo.ipynb
src/municipal_research/: __init__.py  main.py
src/municipal_research/agents/: __init__.py  analysis_agent.py  base_agent.py  data_agent.py  research_agent.py
src/municipal_research/analysis/: __init__.py  legal_code_analyzer.py  text_analyzer.py  visualization.py
src/municipal_research/data_collection/: __init__.py  base_collector.py  california_collector.py  florida_collector.py  georgia_collector.py  municipal_data_collector.py  texas_collector.py
src/municipal_research/utils/: __init__.py  config_manager.py  logging_config.py
tests/: test_basic_functionality.py
